[package]
name = "dt-instance"
version = "0.1.0"
authors = ["Rafael"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.11", features = ["serde"] }
rumq-client = "0.1.0-alpha.10"
tokio = { version = "0.2", features = ["io-util", "tcp", "dns", "stream", "sync", "time", "macros"] }
cdrs = { version = "2" }
cdrs_helpers_derive = "0.3.3"
serde = "1.0.106"
bson = "0.14.1"
serde_json = "1.0.51"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde_derive = "1.0.110"
log = "0.4.8"
env_logger = "0.7.1"
rand = "0.7.3"
reqwest = { version = "0.10.6", features = ["blocking", "json"] }
time = { version = "0.2", features = ["serde"] }
